--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,42 +1,42 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" th:href="@{/img/logo.png}" type="image/x-icon">
-    <link rel="stylesheet" th:href="@{/styles/header.css}">
-    <title>CageTech</title>
+    <link rel="icon" href="../static/img/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="../static/styles/header.css">
+    <title></title>
 </head>
 <body>
     
     <div class="header-container" id="header-container">
         <div class="header-container-logo" id="header-container-logo">
-            <img th:src="@{/img/logo.png}" alt="CageTech" title="CageTech">
+            <img src="../static/img/logo.png" alt="CageTech" title="CageTech">
         </div>
 
         <div class="header-container-icons" id="header-container-icons">
 
             <div class="header-container-icon" id="header-container-icon-rutinas">
-                <a th:href="@{/pages/rutinas}" class="header-container-icon-link" id="header-container-icon-link-rutinas">
-                    <img th:src="@{/img/rutina-primary.svg}" alt="Rutinas" title="Rutinas" class="header-container-icon-img" id="header-container-icon-img-rutinas">
+                <a href="../pages/rutinas.html" class="header-container-icon-link" id="header-container-icon-link-rutinas">
+                    <img src="../static/img/rutina-primary.svg" alt="Rutinas" title="Rutinas" class="header-container-icon-img" id="header-container-icon-img-rutinas">
                 </a>
             </div>
 
             <div class="header-container-icon" id="header-container-icon-estadisticas">
-                <a th:href="@{/pages/estadisticas}" class="header-container-icon-link" id="header-container-icon-link-estadisticas">
-                    <img th:src="@{/img/estats-primary.svg}" alt="Estadísticas" title="Estadísticas" class="header-container-icon-img" id="header-container-icon-img-estadisticas">
+                <a href="../pages/estadisticas.html" class="header-container-icon-link" id="header-container-icon-link-estadisticas">
+                    <img src="../static/img/estats-primary.svg" alt="Estadísticas" title="Estadísticas" class="header-container-icon-img" id="header-container-icon-img-estadisticas">
                 </a>
             </div>
 
             <div class="header-container-icon" id="header-container-icon-perfil">
-                <a th:href="@{/pages/perfil}" class="header-container-icon-link" id="header-container-icon-link-perfil">
-                    <img th:src="@{/img/perfil-primary.svg}" alt="Perfil" title="Perfil" class="header-container-icon-img" id="header-container-icon-img-perfil">
+                <a href="../pages/perfil.html" class="header-container-icon-link" id="header-container-icon-link-perfil">
+                    <img src="../static/img/perfil-primary.svg" alt="Perfil" title="Perfil" class="header-container-icon-img" id="header-container-icon-img-perfil">
                 </a>
             </div>
 
             <div class="header-container-icon" id="header-container-icon-ajustes">
-                <a th:href="@{/pages/ajustes}" class="header-container-icon-link" id="header-container-icon-link-ajustes">
-                    <img th:src="@{/img/ajustes-primary.svg}" alt="Ajustes" title="Ajustes" class="header-container-icon-img" id="header-container-icon-img-ajustes">
+                <a href="../pages/ajustes.html" class="header-container-icon-link" id="header-container-icon-link-ajustes">
+                    <img src="../static/img/ajustes-primary.svg" alt="Ajustes" title="Ajustes" class="header-container-icon-img" id="header-container-icon-img-ajustes">
                 </a>
             </div>
 
