Login and registration pages

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,7 +15,7 @@
 
         <img src="../img/User.svg" alt="user" id="login-form-img" class="login-form-img">
 
-        <form method="POST" id="login-form" class="login-form" action="../php/login.php">
+        <form method="POST" id="login-form" class="login-form">
             <div id="login-form-group-email" class="login-form-group">
                 <input type="email" 
                 id="input-login-mail" class="input-login" 
