Login and registration pages

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/login.css">
-    <link rel="icon" href="../img/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="../static/styles/login.css">
+    <link rel="icon" href="../static/img/logo.png" type="image/x-icon">
     <title>Login</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
 
         <h1 id="login-title" class="login-title">Iniciar Sesión</h1>
 
-        <img src="../img/User.svg" alt="user" id="login-form-img" class="login-form-img">
+        <img src="../static/img/User.svg" alt="user" id="login-form-img" class="login-form-img">
 
         <form method="POST" id="login-form" class="login-form">
             <div id="login-form-group-email" class="login-form-group">
