--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../img/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="../styles/registration.css">
+    <link rel="icon" href="../static/img/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="../static/styles/registration.css">
     <title>Registration</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
 
         <h1 id="register-form-title" class="register-form-title">Registarse</h1>
 
-        <img src="../img/User.svg" alt="user" id="register-form-img" class="register-form-img">
+        <img src="../static/img/User.svg" alt="user" id="register-form-img" class="register-form-img">
 
         <form method="POST" id="register-form" class="register-form">
             <div id="register-form-group-email" class="register-form-group">
@@ -52,10 +52,6 @@
 
             <button type="submit" id="btn-register-submit" class="btn-register-submit">REGISTRARSE</button>
         </form>
-
-        <?php
-            include '../php/registration.php';
-        ?>
 
     </div>
 
