--- a/src/main/resources/templates/rutinas.html
+++ b/src/main/resources/templates/rutinas.html
@@ -12,7 +12,7 @@
 
     <div id="header"></div>
 
-    <div class="main-content">
+    <div class="main-content" id="main-content">
         <h1 id="rutinas-title" class="rutinas-title">Rutinas</h1>
 
         <button type="button" onclick="btnAddRutina()"
