--- a/src/main/resources/static/styles/rutinas.css
+++ b/src/main/resources/static/styles/rutinas.css
@@ -16,6 +16,15 @@ html, body {
     width: 100%;
 }
 
+#header-container-icon-rutinas {
+    border-bottom: 2px solid var(--elements-color-primary);
+}
+
+
+#header-container-icon-img-rutinas {
+    content: url("../img/rutina-p-selected.svg");
+}
+
 .main-content {
     width: 100%;
     height: 100%;
