TODO add tables to db

--- a/src/main/resources/templates/perfil.html
+++ b/src/main/resources/templates/perfil.html
@@ -6,6 +6,10 @@
     <title>Perfil</title>
 </head>
 <body>
+
+    <div id="header" class="header"></div>
+
+    <div class="main-content"></div>
     
 </body>
 </html>
