Redirect to register logic

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -41,7 +41,7 @@
             </div>
 
             <div id="register-form-group-link" class="register-form-group">
-                <p><b>¿Ya tienes cuenta? <a href="./login.html">Iniciar Sesión</a></b></p>
+                <p><b>¿Ya tienes cuenta? <a href="/login">Iniciar Sesión</a></b></p>
             </div>
 
             <button type="submit" id="btn-register-submit" class="btn-register-submit">REGISTRARSE</button>
