Controller changes for login and registration

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,7 +29,7 @@
             </div>
 
             <div id="login-form-group-link" class="login-form-group">
-                <p><b>¿Aún no tienes cuenta? <a href="/register">Crear cuenta</a></b></p>
+                <p><b>¿Aún no tienes cuenta? <a th:href="@{/register}">Crear cuenta</a></b></p>
             </div>
 
             <button type="submit" id="btn-login-submit" class="btn-login-submit">ENTRAR</button>
