--- a/src/main/resources/static/styles/registration.css
+++ b/src/main/resources/static/styles/registration.css
@@ -119,7 +119,7 @@ input[type="text"]:focus::placeholder {
 }
 
 #register-form-group-link p {
-    color: #000000;
+    color: #ffffff;
 }
 
 #register-form-group-link a {
