--- a/src/main/resources/templates/rutinas.html
+++ b/src/main/resources/templates/rutinas.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../static/img/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="../static/styles/rutinas.css">
-    <script src="../static/scripts/rutinas.js"></script>
+    <link rel="icon" th:href="../static/img/logo.png" type="image/x-icon">
+    <link rel="stylesheet" th:href="../static/styles/rutinas.css">
+    <script th:src="../static/scripts/rutinas.js"></script>
     <title>Rutinas</title>
 </head>
 <body>
