--- a/src/main/resources/templates/rutinas.html
+++ b/src/main/resources/templates/rutinas.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" th:href="../static/img/logo.png" type="image/x-icon">
-    <link rel="stylesheet" th:href="../static/styles/rutinas.css">
-    <script th:src="../static/scripts/rutinas.js"></script>
+    <link rel="icon" th:href="@{/img/logo.svg}" type="image/x-icon">
+    <link rel="stylesheet" th:href="@{/styles/rutinas.css}">
+    <script th:src="@{/scripts/rutinas.js}"></script>
     <title>Rutinas</title>
 </head>
 <body>
