--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,7 +15,7 @@
 
         <img th:src="@{/img/User.svg}" alt="user" id="login-form-img" class="login-form-img">
 
-        <form action="/rutinas" method="POST" id="login-form" class="login-form">
+        <form action="/rutinas/login" method="POST" id="login-form" class="login-form">
             <div id="login-form-group-email" class="login-form-group">
                 <input type="email" 
                 id="input-login-mail" class="input-login" 
