a lot of changes

--- a/src/main/resources/static/styles/colors.css
+++ b/src/main/resources/static/styles/colors.css
@@ -19,4 +19,7 @@
     --link-color-hover: #0099ff;
     --form-input-focus-color: #007bff;
     --form-input-hover-color: #666;
+
+    --list-color-primary: yellowgreen;
+    --container-mma : #d0ff00;
 }
