--- a/src/main/resources/static/styles/rutinas.css
+++ b/src/main/resources/static/styles/rutinas.css
@@ -5,7 +5,6 @@ html, body {
     flex-direction: column;
     justify-content: top;
     align-items: center;
-    height: 100vh;
     width: 100%;
 
     background-color: var(--body-color-primary);
@@ -140,7 +139,13 @@ html, body {
     margin-bottom: 10px;
     padding: 12px 20px;
     border-radius: 16px;
-    background-color: yellowgreen;
+    background-color: var(--list-color-primary);
+}
+
+a.rutinas-container-rutinas-lista-link {
+    text-decoration: none;
+    color: white;
+    cursor: pointer;
 }
 
 .rutinas-container-rutinas-lista li:hover {
