--- a/src/main/resources/static/styles/ajustes.css
+++ b/src/main/resources/static/styles/ajustes.css
@@ -6,6 +6,7 @@ html, body {
     justify-content: top;
     align-items: center;
     width: 100%;
+    height: 100%;
 
     background-color: var(--body-color-primary);
     font-family: 'Roboto', sans-serif;
