last changes and updates

--- a/src/main/resources/templates/ajustes.html
+++ b/src/main/resources/templates/ajustes.html
@@ -88,7 +88,7 @@
         </div>
     </div>
 
-    <script>
+    <!-- <script>
 
         window.onload = function() {
             const bodyColor = localStorage.getItem('--body-color-primary');
@@ -148,7 +148,7 @@
             document.html.style.setProperty('--container-mma', selection);
             localStorage.setItem('--container-mma', selection);
         }
-    </script>
+    </script> -->
 
 </body>
 </html>
