--- a/src/main/resources/templates/perfil.html
+++ b/src/main/resources/templates/perfil.html
@@ -67,7 +67,7 @@
         </form>
     </div>
 
-    <script>
+    <!-- <script>
         window.onload =  function() {
             // Apply saved colors from localStorage if they exist
             const bodyColor = localStorage.getItem('--body-color-primary');
@@ -82,7 +82,7 @@
             if (listColor) document.body.style.setProperty('--list-color-primary', listColor);
             if (MMAColor) document.body.style.setProperty('--container-mma', MMAColor);
         };
-    </script>
+    </script> -->
     
 </body>
 </html>
