--- a/src/main/resources/templates/rutinas.html
+++ b/src/main/resources/templates/rutinas.html
@@ -80,7 +80,7 @@
 
     </div>
     
-    <script>
+    <!-- <script>
         window.onload =  function() {
             // Apply saved colors from localStorage if they exist
             const bodyColor = localStorage.getItem('--body-color-primary');
@@ -95,7 +95,7 @@
             if (listColor) document.body.style.setProperty('--list-color-primary', listColor);
             if (MMAColor) document.body.style.setProperty('--container-mma', MMAColor);
         };
-    </script>
+    </script> -->
 
 </body>
 </html>
