--- a/src/main/resources/templates/detalleRutina.html
+++ b/src/main/resources/templates/detalleRutina.html
@@ -97,7 +97,7 @@
 
     </div>
 
-    <script>
+    <!-- <script>
         window.onload =  function() {
             // Apply saved colors from localStorage if they exist
             const bodyColor = localStorage.getItem('--body-color-primary');
@@ -112,7 +112,7 @@
             if (listColor) document.body.style.setProperty('--list-color-primary', listColor);
             if (MMAColor) document.body.style.setProperty('--container-mma', MMAColor);
         };
-    </script>
+    </script> -->
     
 </body>
 </html>
